fix: mobile overflow

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -7,6 +7,7 @@ body {
     font-family: 'Quicksand', sans-serif;
     background-color: #b8d8be;
     text-shadow: 2px 1px 2px #fffbd6;
+    overflow-x: hidden;
 }
 
 .main__top {
